Stripe-Custom-QtC-Demo/force-app/main/default/objects/Opportunity/fields/Amendment_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Amendment_Start_Time__c</fullName>
    <label>Amendment Start Time</label>
    <type>DateTime</type>
</CustomField>