Stripe-Custom-QtC-Demo/force-app/main/default/objects/Opportunity/fields/Opportunity_Amendment__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Amendment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Amendment</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Amendment_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>