Stripe-Custom-QtC-Demo/force-app/main/default/objects/Opportunity/fields/Stripe_Customert__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Customert__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Stripe Customert</label>
    <referenceTo>Stripe_Customer__c</referenceTo>
    <relationshipLabel>Opportunities (Stripe Customert)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>