Stripe-Custom-QtC-Demo/force-app/main/default/objects/Opportunity/fields/Stripe_Subscription_Schedule_ID__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Subscription_Schedule_ID__c</fullName>
    <label>Stripe Subscription Schedule ID</label>
    <type>TextArea</type>
</CustomField>